# PrettyIP

./: Cargo.toml  Readme.md  adj2.txt  adj3.txt  adj4.txt  adj5.txt  adj_list.txt  adjective_list.txt  animal_list.txt  animal_list2.txt  animal_list3.txt
data/: emoji_list.txt
src/: adjective_words.rs  main.rs  pretty_ip_1.rs  pretty_ip_2.rs  pretty_ip_3.rs  pretty_ip_4.rs  pretty_ip_5.rs  util.rs
src/formats/: adj_animal.rs  color_dot.rs  color_line.rs  just_colored.rs  mod.rs  two_color.rs  with_netname.rs
src/formats/adj_animal/: adjectives.rs  animals.rs
src/formats/color_dot/: colors.rs
