[package]
name = "pretty_ip"
version = "0.1.0"
authors = ["Patrick Beagan <pbeagan1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
local-ip-address = "0.5.1"
regex = "1.7.1"
